utils module added ui initialization

--- a/examples/todoapp/public/components.json
+++ b/examples/todoapp/public/components.json
@@ -209,7 +209,7 @@
     "children": [
       {
         "ui-type": "#text",
-        "text": "Menu"
+        "text": ""
       }
     ],
     "attributes":{
